server/kubernetes/finansu/finansu-ns.yml
kind: Namespace
apiVersion: apps/v1
metadata:
  name: finansu
  labels:
    name: finansu
