server/kubernetes/finansu/finansu-k8s-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finansu-api-deployment
spec:
  selector:
    matchLabels:
      app: finansu-api
  replicas: 1
  template:
    metadata:
      labels:
        app: finansu-api
    spec:
      containers:
      - name: finansu-api-container
        image: nutfes/finansu-api:latest
        ports:
        - containerPort: 1323
---
apiVersion: v1
kind: Service
metadata:
  name: finansu-service
spec:
  type: NodePort
  ports:
  - port: 1323
  selector:
    app: finansu-api
